// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Board renders 9 slots 1`] = `
<div
  className="sc-bxivhb ioDhEN"
>
  <div
    className="sc-htpNat elABiC"
    data-testid="Slot0"
    onClick={[Function]}
  />
  <div
    className="sc-htpNat elABiC"
    data-testid="Slot1"
    onClick={[Function]}
  />
  <div
    className="sc-htpNat elABiC"
    data-testid="Slot2"
    onClick={[Function]}
  />
  <div
    className="sc-htpNat elABiC"
    data-testid="Slot3"
    onClick={[Function]}
  />
  <div
    className="sc-htpNat elABiC"
    data-testid="Slot4"
    onClick={[Function]}
  />
  <div
    className="sc-htpNat elABiC"
    data-testid="Slot5"
    onClick={[Function]}
  />
  <div
    className="sc-htpNat elABiC"
    data-testid="Slot6"
    onClick={[Function]}
  />
  <div
    className="sc-htpNat elABiC"
    data-testid="Slot7"
    onClick={[Function]}
  />
  <div
    className="sc-htpNat elABiC"
    data-testid="Slot8"
    onClick={[Function]}
  />
</div>
`;

exports[`Board renders filled slots 1`] = `
<div
  className="sc-bxivhb ioDhEN"
>
  <div
    className="sc-htpNat elABiC"
    data-testid="Slot0"
    onClick={[Function]}
  >
    <svg
      className="sc-bdVaJa UCUEj"
    >
      x.svg
    </svg>
  </div>
  <div
    className="sc-htpNat elABiC"
    data-testid="Slot1"
    onClick={[Function]}
  />
  <div
    className="sc-htpNat elABiC"
    data-testid="Slot2"
    onClick={[Function]}
  >
    <svg
      className="sc-bwzfXH igOhkK"
    >
      circle.svg
    </svg>
  </div>
  <div
    className="sc-htpNat elABiC"
    data-testid="Slot3"
    onClick={[Function]}
  />
  <div
    className="sc-htpNat elABiC"
    data-testid="Slot4"
    onClick={[Function]}
  />
  <div
    className="sc-htpNat elABiC"
    data-testid="Slot5"
    onClick={[Function]}
  />
  <div
    className="sc-htpNat elABiC"
    data-testid="Slot6"
    onClick={[Function]}
  />
  <div
    className="sc-htpNat elABiC"
    data-testid="Slot7"
    onClick={[Function]}
  />
  <div
    className="sc-htpNat elABiC"
    data-testid="Slot8"
    onClick={[Function]}
  />
</div>
`;
